fixed start page so it works on smaller screens and 1080p

--- a/startpage.css
+++ b/startpage.css
@@ -1,79 +1,68 @@
-@import url('https://fonts.googleapis.com/css2?family=Italianno&display=swap');
-
-body {
-    background-color: #f0f0f0;
-    margin: 0;
-}
-
-#flex {
-    font-family: Arial, sans-serif;
-    background-color: #f0f0f0;
-    display: flex;
-    flex-direction: column;
+.bigTitle{
+    font-size: 7rem;
     align-items: center;
-}
-
-.bigTitle {
-    font-family: 'Italianno', "Arial",cursive;
-    font-size: 20rem;
-    text-align: center;
-    display: block;
-}
-
-
-.card {
     display: flex;
-    flex-direction: column;
-    align-items: center;
+    justify-content: center;
+}
+
+@media screen and (max-width:750px) {
+    .bigTitle{
+        font-size: 4rem;
+    }
+    .card-group{
+        width: 80%;
+    }
+}
+
+@media screen and (max-width:575px) {
+    .card-group{
+        width: 50% !important;
+    }
+    .bigTitle{
+        font-size: 3rem;
+    }
+    .card-text{
+        font-size: 0.7rem;
+    }
+}
+
+@media screen and (max-width:450px){
+    .card-group{
+    width: 60% !important;
+    }
+}
+
+.card-group{
+    width: 50%;
+    margin: 0 auto;
+    margin-bottom: 9%;
+}
+
+@media screen and (max-width:1920px) {
+    .card-group{
+        width: 65%;
+    }
+}
+
+.card{
+    border-radius: 20px;
+  
+    padding: 20px;
+    border: none !important;
+}
+
+img{
+    width: auto !important;
+    height: auto !important;
+}
+
+
+.card-title{
     text-align: center;
-    background-color: #fff;
-    border-radius: 10px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-    transition: transform 0.2s, box-shadow 0.2s;
-
-    text-decoration: none;
-    color: #333;
+    font-size: 1.7rem;
 }
 
-.card:hover {
-    transform: scale(1.05);
-    box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
-}
-
-.card img {
-    width: 100%;
-    height: auto;
-    border-top-left-radius: 10px;
-    border-top-right-radius: 10px;
-}
-
-@media screen and (min-width: 1200px) {
-    #flex {
-        flex-direction: row;
-        justify-content: center;
-    }
-
-    .card {
-        margin: 0 1rem;
-    }
-}
-
-@media screen and (max-width: 1800px) {
-    .bigTitle {
-        font-size: 10rem;
-    }
-
-    .smallTitle {
-        font-size: 2rem;
-    }
-}
-
-@media screen and (max-width: 450px) {
-    .bigTitle {
-        font-size: 5rem;
-    }
-
-    .smallTitle {
-        font-size: 1rem;
-    }
+.card-text{
+    text-align: center;
+    font-size: 1.2rem;
 }
